<resources>
    <string name="app_name">Ratio</string>
    <string name="title_activity_main">Ratio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="back4app_server_url">https://projectfinancial.back4app.io/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">zdSPwbEEyc9U6AFgzYTI2oWsxw5fMSEOoIrOBOk3</string>
    <string name="back4app_client_key">D1bea1iBwKmR0uOXZD3EoIYYtMuUycXHEUDltD3H</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_recommendations">Enable notification</string>
    <string name="pref_description_notification">Enables or disable notification when expenses
        exceed your revenues
    </string>

    <string name="pref_title_display_name">Edit notification message</string>
    <string name="pref_default_display_name">Enter notification message</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="statuses">
        <item>Active</item>
        <item>Archived</item>
        <item>Proposal</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="clear_local_storage">Clear local storage</string>
    <string name="logout">Logout</string>

</resources>
