<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_notification"
        android:title="@string/pref_title_recommendations" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textMultiLine"
        android:key="notification_message"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_display_name"
        android:maxLength="200"
        android:dependency="example_switch"/>
</PreferenceScreen>
