<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ratio.MainActivity">
    <item
        android:id="@+id/action_manage"
        android:orderInCategory="100"
        android:title="Manage Users"
        android:icon="@drawable/ic_people"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reports"
        android:orderInCategory="100"
        android:title="Show reports"
        android:icon="@drawable/ic_insert_chart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clearlocal"
        android:orderInCategory="100"
        android:title="@string/clear_local_storage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
